# runme

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
completions/: runme.bash  runme.fish  runme.ps1  runme.zsh
src/: main.rs
tests/: cli.rs  compgen.rs  create.rs  fixtures.rs  interrupt.rs  macros.rs  runmefile.rs  spec.sh  tests.rs
tests/snapshots/: integration__compgen__compgen_choice_fn.snap
