[package]
name = "runme"
version = "0.3.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "A shell-script driven task runner"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/runme"
repository = "https://github.com/sigoden/runme"
autotests = false
categories = ["command-line-utilities"]
keywords = ["command-line", "task-runner", "task-automation", "build-tool"]

[dependencies]
argc = "0.12"
anyhow = "1"
which = "4.2"
either = "1.8"
clap = { version = "4.0", features = ["string"]}
ctrlc = "3.2"


[dev-dependencies]
insta = "1.15"
assert_cmd = "2"
assert_fs = "1"
rstest = "0.15"
predicates = "2"
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"

[[test]]
name = "integration"
path = "tests/tests.rs"
